index.html: embedded favicon
remove one (failing) html GET request

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en" manifest="cache.manifest">
+<link href="data:image/ico;base64,AAABAAEAEBACAAAAAACwAAAAFgAAACgAAAAQAAAAIAAAAAEAAQAAAAAAQAAAAAAAAAAAAAAAAgAAAAAAAAD///8AuXULAP//AADGNwAAtasAALWtAADGLQAA9/8AAP//AAD//wAA//8AAP//AADzFwAA7tcAAO7XAADzFwAA//cAAP//AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" rel=icon>
 <head>
 	<title>CalDavZAP</title>
 	<meta http-equiv="cache-control" content="no-cache" />
